@@ -1,6 +1,6 @@
 
-                               XQF 0.9.5a beta
-                             (November 18th 2000)
+                               XQF 0.9.5b beta
+                             (November 27th 2000)
 
 DESCRIPTION
 -----------
