@@ -29,7 +29,7 @@
 #include "flt-player.h"
 
 
-static int server_filter (struct server *s);
+static int server_pass_filter (struct server *s, struct server_filter_vars *vars);
 static void server_filter_init (void);
 
 
@@ -38,7 +38,7 @@ struct filter filters[FILTERS_TOTAL] = {
     "Server",
     "S Filter",
     "SF Cfg",
-    server_filter,
+    server_pass_filter,
     server_filter_init,
     NULL,
     1,
@@ -57,16 +57,9 @@ struct filter filters[FILTERS_TOTAL] = {
 };
 
 
-unsigned char cur_filter = 0;
+struct server_filter_vars *vars;
 
-int	filter_retries;
-int	filter_ping;
-int 	filter_not_full;
-int 	filter_not_empty;
-int	filter_no_cheats;
-int	filter_no_password;
-char    *mod_contains;
-char    *version_contains;
+unsigned char cur_filter = 0;
 
 unsigned filter_current_time = 1;
 
@@ -91,7 +84,7 @@ void apply_filters (unsigned mask, struct server *s) {
   for (n = 0, i = 1; n < FILTERS_TOTAL; n++, i <<= 1) {
     if ((mask & i) == i && (filters[n].last_changed > s->flt_last ||
                                                     (s->flt_mask & i) != i)) {
-      if ((*filters[n].func) (s))
+      if ((*filters[n].func) (s, vars))
 	s->filters |= i;
       else 
 	s->filters &= ~i;
@@ -127,36 +120,42 @@ GSList *build_filtered_list (unsigned mask, GSList *servers) {
 }
 
 
-static int server_filter (struct server *s) {
+static int server_pass_filter (struct server *s, struct server_filter_vars *vars){
+  /* 
+     This applies a filter's attributes to a server entry
+     and returns true/false depending on if it passes the
+     filter or not.
+  */
+
   char **info_ptr;
   if (s->ping == -1)	/* no information */
     return TRUE;
 
-  if( mod_contains && strlen( mod_contains )  && ! s->mod )
+  if( vars->mod_contains && strlen( vars->mod_contains )  && ! s->mod )
     return FALSE;
 
-  if( version_contains && strlen (version_contains)) {
+  if( vars->version_contains && strlen (vars->version_contains)) {
     /* Filter for the version */
     for (info_ptr = s->info; info_ptr && *info_ptr; info_ptr += 2) {
       if (strcmp (*info_ptr, "version") == 0) {
-	if( !strstr( info_ptr[1], version_contains )){
+	if( !strstr( info_ptr[1], vars->version_contains )){
 	  return FALSE;
 	}
       }
     }
   }/*end version check */
 
-  if (s->retries < filter_retries && 
-      s->ping < filter_ping &&
+  if (s->retries < vars->filter_retries && 
+      s->ping < vars->filter_ping &&
 
-      ( !mod_contains || !strlen( mod_contains ) || 
-	( s->mod && strstr( s->mod, mod_contains ))) &&
+      ( !vars->mod_contains || !strlen( vars->mod_contains ) || 
+	( s->mod && strstr( s->mod, vars->mod_contains ))) &&
 
 
-      (!filter_not_full || s->curplayers != s->maxplayers) && 
-      (!filter_not_empty || s->curplayers != 0) &&
-      (!filter_no_cheats || (s->flags & SERVER_CHEATS) == 0) &&
-      (!filter_no_password || (s->flags & SERVER_PASSWORD) == 0))
+      (!vars->filter_not_full    || s->curplayers != s->maxplayers) && 
+      (!vars->filter_not_empty   || s->curplayers != 0) &&
+      (!vars->filter_no_cheats   || (s->flags & SERVER_CHEATS) == 0) &&
+      (!vars->filter_no_password || (s->flags & SERVER_PASSWORD) == 0))
     return TRUE;
 
   return FALSE;
@@ -165,15 +164,16 @@ static int server_filter (struct server *s) {
 
 static void server_filter_init (void) {
   config_push_prefix ("/" CONFIG_FILE "/Server Filter");
-
-  filter_retries     = config_get_int  ("retries=2");
-  filter_ping        = config_get_int  ("ping=1000");
-  filter_not_full    = config_get_bool ("not full=false");
-  filter_not_empty   = config_get_bool ("not empty=false");
-  filter_no_cheats   = config_get_bool ("no cheats=false");
-  filter_no_password = config_get_bool ("no password=false");
-  mod_contains       = config_get_string_with_default ("mod_contains",NULL);
-  version_contains   = config_get_string_with_default ("version_contains",NULL);
+  vars = g_malloc( sizeof( struct server_filter_vars ));
+  
+  vars->filter_retries     = config_get_int  ("retries=2");
+  vars->filter_ping        = config_get_int  ("ping=1000");
+  vars->filter_not_full    = config_get_bool ("not full=false");
+  vars->filter_not_empty   = config_get_bool ("not empty=false");
+  vars->filter_no_cheats   = config_get_bool ("no cheats=false");
+  vars->filter_no_password = config_get_bool ("no password=false");
+  vars->mod_contains       = config_get_string_with_default ("mod_contains",NULL);
+  vars->version_contains   = config_get_string_with_default ("version_contains",NULL);
   config_pop_prefix ();
 }
 
@@ -188,14 +188,14 @@ static void server_filter_new_defaults (void) {
 
   i = gtk_spin_button_get_value_as_int (
                                     GTK_SPIN_BUTTON (filter_retries_spinner));
-  if (filter_retries != i) {
-    config_set_int  ("retries", filter_retries = i);
+  if (vars->filter_retries != i) {
+    config_set_int  ("retries", vars->filter_retries = i);
     filters[FILTER_SERVER].changed = FILTER_CHANGED;
   }
 
   i = gtk_spin_button_get_value_as_int (GTK_SPIN_BUTTON (filter_ping_spinner));
-  if (filter_ping != i) {
-    config_set_int  ("ping", filter_ping = i);
+  if (vars->filter_ping != i) {
+    config_set_int  ("ping", vars->filter_ping = i);
     filters[FILTER_SERVER].changed = FILTER_CHANGED;
   }
 
@@ -208,26 +208,26 @@ static void server_filter_new_defaults (void) {
       First case, the user entered something.  See if the value
       is different 
     */
-    if (mod_contains){
-      if( strcmp( gcptr, mod_contains )) text_changed = 1;
-      g_free( mod_contains );
+    if (vars->mod_contains){
+      if( strcmp( gcptr, vars->mod_contains )) text_changed = 1;
+      g_free( vars->mod_contains );
     } else {
       text_changed = 1;
     }
-    mod_contains = g_malloc( sizeof( char ) * ( strlen( gcptr ) + 1 ));
-    sprintf( mod_contains, "%s\0",  gcptr );
+    vars->mod_contains = g_malloc( sizeof( char ) * ( strlen( gcptr ) + 1 ));
+    sprintf( vars->mod_contains, "%s\0",  gcptr );
     if (text_changed) {
-      config_set_string ("mod_contains", mod_contains );
+      config_set_string ("mod_contains", vars->mod_contains );
       filters[FILTER_SERVER].changed = FILTER_CHANGED;
     }
   } else {
-    if (mod_contains){
+    if (vars->mod_contains){
       text_changed = 1; /* From something to nothing */
-      g_free( mod_contains );
+      g_free( vars->mod_contains );
       config_set_string ("mod_contains", "" );
       filters[FILTER_SERVER].changed = FILTER_CHANGED;
     }
-    mod_contains = NULL;
+    vars->mod_contains = NULL;
   } 
   g_free( gcptr );
 
@@ -240,52 +240,52 @@ static void server_filter_new_defaults (void) {
       First case, the user entered something.  See if the value
       is different 
     */
-    if (version_contains){
-      if( strcmp( gcptr, version_contains )) text_changed = 1;
-      g_free( version_contains );
+    if (vars->version_contains){
+      if( strcmp( gcptr, vars->version_contains )) text_changed = 1;
+      g_free( vars->version_contains );
     } else {
       text_changed = 1;
     }
-    version_contains = g_malloc( sizeof( char ) * ( strlen( gcptr ) + 1 ));
-    sprintf( version_contains, "%s\0",  gcptr );
+    vars->version_contains = g_malloc( sizeof( char ) * ( strlen( gcptr ) + 1 ));
+    sprintf( vars->version_contains, "%s\0",  gcptr );
     if (text_changed) {
-      config_set_string ("version_contains", version_contains );
+      config_set_string ("version_contains", vars->version_contains );
       filters[FILTER_SERVER].changed = FILTER_CHANGED;
     }
   } else {
-    if (version_contains){
+    if (vars->version_contains){
       text_changed = 1; /* From something to nothing */
-      g_free( version_contains );
+      g_free( vars->version_contains );
       config_set_string ("version_contains", "" );
       filters[FILTER_SERVER].changed = FILTER_CHANGED;
     }
-    version_contains = NULL;
+    vars->version_contains = NULL;
   } 
   g_free( gcptr );
 
 
 
   i = GTK_TOGGLE_BUTTON (filter_not_full_check_button)->active;
-  if (filter_not_full != i) {
-    config_set_bool ("not full", filter_not_full = i);
+  if (vars->filter_not_full != i) {
+    config_set_bool ("not full", vars->filter_not_full = i);
     filters[FILTER_SERVER].changed = FILTER_CHANGED;
   }
 
   i = GTK_TOGGLE_BUTTON (filter_not_empty_check_button)->active;
-  if (filter_not_empty != i) {
-    config_set_bool ("not empty", filter_not_empty = i);
+  if (vars->filter_not_empty != i) {
+    config_set_bool ("not empty", vars->filter_not_empty = i);
     filters[FILTER_SERVER].changed = FILTER_CHANGED;
   }
 
   i = GTK_TOGGLE_BUTTON (filter_no_cheats_check_button)->active;
-  if (filter_no_cheats != i) {
-    config_set_bool ("no cheats", filter_no_cheats = i);
+  if (vars->filter_no_cheats != i) {
+    config_set_bool ("no cheats", vars->filter_no_cheats = i);
     filters[FILTER_SERVER].changed = FILTER_CHANGED;
   }
 
   i = GTK_TOGGLE_BUTTON (filter_no_password_check_button)->active;
-  if (filter_no_password != i) {
-    config_set_bool ("no password", filter_no_password = i);
+  if (vars->filter_no_password != i) {
+    config_set_bool ("no password", vars->filter_no_password = i);
     filters[FILTER_SERVER].changed = FILTER_CHANGED;
   }
 
@@ -333,7 +333,7 @@ static void server_filter_page (GtkWidget *notebook) {
                                                                          0, 0);
   gtk_widget_show (label);
 
-  adj = gtk_adjustment_new (filter_ping, 0.0, MAX_PING, 100.0, 1000.0, 0.0);
+  adj = gtk_adjustment_new (vars->filter_ping, 0.0, MAX_PING, 100.0, 1000.0, 0.0);
 
   filter_ping_spinner = gtk_spin_button_new (GTK_ADJUSTMENT (adj), 0, 0);
   gtk_spin_button_set_update_policy (GTK_SPIN_BUTTON (filter_ping_spinner), 
@@ -350,7 +350,7 @@ static void server_filter_page (GtkWidget *notebook) {
                                                                          0, 0);
   gtk_widget_show (label);
 
-  adj = gtk_adjustment_new (filter_retries, 0.0, MAX_RETRIES, 1.0, 1.0, 0.0);
+  adj = gtk_adjustment_new (vars->filter_retries, 0.0, MAX_RETRIES, 1.0, 1.0, 0.0);
 
   filter_retries_spinner = gtk_spin_button_new (GTK_ADJUSTMENT (adj), 0, 0);
   gtk_widget_set_usize (filter_retries_spinner, 64, -1);
@@ -371,7 +371,7 @@ static void server_filter_page (GtkWidget *notebook) {
   gtk_widget_set_usize (mod_contains_entry, 64, -1);
   gtk_entry_set_editable (GTK_ENTRY (mod_contains_entry), TRUE);
   gtk_entry_set_text (GTK_ENTRY (mod_contains_entry), 
-		      (mod_contains)? mod_contains : "");
+		      (vars->mod_contains) ? vars->mod_contains : "");
 
   gtk_table_attach_defaults (GTK_TABLE (table), mod_contains_entry, 4, 5, 0, 1);
   gtk_widget_show (mod_contains_entry);
@@ -388,7 +388,7 @@ static void server_filter_page (GtkWidget *notebook) {
   gtk_widget_set_usize (version_contains_entry, 64, -1);
   gtk_entry_set_editable (GTK_ENTRY (version_contains_entry), TRUE);
   gtk_entry_set_text (GTK_ENTRY (version_contains_entry), 
-		      (version_contains)? version_contains : "");
+		      (vars->version_contains) ? vars->version_contains : "");
 
   gtk_table_attach_defaults (GTK_TABLE (table), version_contains_entry, 4, 5, 1, 2);
   gtk_widget_show (version_contains_entry);
@@ -400,7 +400,7 @@ static void server_filter_page (GtkWidget *notebook) {
   filter_not_full_check_button = 
                             gtk_check_button_new_with_label ("it is not full");
   gtk_toggle_button_set_active (
-            GTK_TOGGLE_BUTTON (filter_not_full_check_button), filter_not_full);
+            GTK_TOGGLE_BUTTON (filter_not_full_check_button), vars->filter_not_full);
   gtk_table_attach_defaults (GTK_TABLE (table), filter_not_full_check_button, 
                                                                    0, 2, 2, 3);
   gtk_widget_show (filter_not_full_check_button);
@@ -410,7 +410,7 @@ static void server_filter_page (GtkWidget *notebook) {
   filter_not_empty_check_button = 
                            gtk_check_button_new_with_label ("it is not empty");
   gtk_toggle_button_set_active (
-          GTK_TOGGLE_BUTTON (filter_not_empty_check_button), filter_not_empty);
+          GTK_TOGGLE_BUTTON (filter_not_empty_check_button), vars->filter_not_empty);
   gtk_table_attach_defaults (GTK_TABLE (table), filter_not_empty_check_button, 
                                                                    0, 2, 3, 4);
   gtk_widget_show (filter_not_empty_check_button);
@@ -420,7 +420,7 @@ static void server_filter_page (GtkWidget *notebook) {
   filter_no_cheats_check_button = 
                     gtk_check_button_new_with_label ("cheats are not allowed");
   gtk_toggle_button_set_active (
-          GTK_TOGGLE_BUTTON (filter_no_cheats_check_button), filter_no_cheats);
+          GTK_TOGGLE_BUTTON (filter_no_cheats_check_button), vars->filter_no_cheats);
   gtk_table_attach_defaults (GTK_TABLE (table), filter_no_cheats_check_button, 
                                                                    0, 2, 4, 5);
   gtk_widget_show (filter_no_cheats_check_button);
@@ -430,7 +430,7 @@ static void server_filter_page (GtkWidget *notebook) {
   filter_no_password_check_button = 
                       gtk_check_button_new_with_label ("no password required");
   gtk_toggle_button_set_active (
-      GTK_TOGGLE_BUTTON (filter_no_password_check_button), filter_no_password);
+      GTK_TOGGLE_BUTTON (filter_no_password_check_button), vars->filter_no_password);
   gtk_table_attach_defaults (GTK_TABLE (table), filter_no_password_check_button, 
                                                                    0, 2, 5, 6);
   gtk_widget_show (filter_no_password_check_button);
