@@ -1,3 +1,7 @@
+Nov 26th 2000: Bill Adams <bill@evil.inetarena.com>
+-Changed a few filter related files to make it easier to
+ put in multiple server filters.
+
 Nov 24th 2000: Alex Burger <alex@fragit.net>
 -Version changed to XQF 0.9.5a-beta
 -Fixed UT launching.  Now passes proper parameters to UT
